--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>★ GOLD STAR TACOS ★ - Best Tacos in Cyberspace!</title>
+    <title>★ GOLD STAR TACOS ★ - Best Breakfast Tacos in Cyberspace!</title>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Comic+Neue:wght@400;700&display=swap');
         
