Center guestbook and update image source

--- a/index.html
+++ b/index.html
@@ -379,7 +379,7 @@
             <a href="#" style="color: #ff1493;">[Next]</a>
         </div>
         
-        <div id="guestbook" class="guestbook">
+        <div id="guestbook" class="guestbook" style="text-align: center;">
             <div class="section-title">✍️ SEND US A TOTALLY RAD EMAIL!</div>
             <a href="mailto:goldstartacos@yahoo.com">GOLDSTARTACOS@YAHOO.com</a>
             <!--
@@ -409,7 +409,7 @@
         You are visitor #1337!
     </div>
 
-    <img src="Gold_Star.jpg">
+    <div style="text-align: center; margin: 2em 0;"><img src="gold-star-logo.png"></div>
     
     <script>
         // Add some 90s JavaScript interactions
